src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Account_Rating__c</fullName>
        <formula>IF (AND (AnnualRevenue &gt; 10000000,
CONTAINS (CASE (BillingCountry, &quot;United States&quot;, &quot;US&quot;, &quot;America&quot;, &quot;US&quot;, &quot;USA&quot;, &quot;US&quot;, &quot;NA&quot;),
&quot;US&quot;)),
IF( ISPICKVAL(Type , &quot;Manufacturing Partner&quot;), &quot;Hot&quot;,
IF(OR ( ISPICKVAL (Type , &quot;Channel Partner / Reseller&quot;),
ISPICKVAL(Type , &quot;Installation Partner&quot;)), &quot;Warm&quot;, &quot;Cold&quot;)),
&quot;Cold&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Rating</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Region__c</fullName>
        <formula>IF(LEN( BillingState)=0, &quot;None&quot;,
IF(CONTAINS(&quot;AK:AZ:CA:HA:NV:NM:OR:UT:WA&quot;, BillingState), &quot;West&quot;,
IF(CONTAINS(&quot;CO:ID:MT:KS:OK:TX:WY&quot;, BillingState), &quot;Central&quot;,
IF(CONTAINS(&quot;CT:ME:MA:NH:NY:PA:RI:VT&quot;, BillingState), &quot;East&quot;,
IF(CONTAINS(&quot;AL:AR:DC:DE:FL:GA:KY:LA:MD:MS:NC:NJ:SC:TN:VA:WV&quot;, BillingState), &quot;South&quot;,
IF(CONTAINS(&quot;IL:IN:IA:MI:MN:MO:NE:ND:OH:SD:WI&quot;, BillingState), &quot;North&quot;, &quot;Other&quot;))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <label>Active</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BBC_News_Search__c</fullName>
        <formula>HYPERLINK(
&quot;http://newssearch.bbc.co.uk/cgi-bin/search/results.pl?scope=newsifs;tab=news;q=&quot;&amp;Name,
&quot;BBC News&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BBC™ News Search</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Hours__c</fullName>
        <label>Business Hours</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactCount__c</fullName>
        <label>ContactCount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CustomerPriority__c</fullName>
        <label>Customer Priority</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Master_client__c</fullName>
        <label>Master client</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_Of_contacts__c</fullName>
        <label>No Of contacts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PAN_Card__c</fullName>
        <label>PAN Card</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Roll_no__c</fullName>
        <label>Roll no</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SFSSDupeCatcher__Override_DupeCatcher__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Account Override DupeCatcher</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SLAExpirationDate__c</fullName>
        <label>SLA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLASerialNumber__c</fullName>
        <label>SLA Serial Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA__c</fullName>
        <label>SLA</label>
        <picklist>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platinum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bronze</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Time_Zone__c</fullName>
        <label>Time Zone</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UpsellOpportunity__c</fullName>
        <label>Upsell Opportunity</label>
        <picklist>
            <picklistValues>
                <fullName>Maybe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>PlatinumandGoldSLACustomers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Platinum and Gold SLA Customers</label>
    </listViews>
    <recordTypes>
        <fullName>sample</fullName>
        <active>true</active>
        <label>sample</label>
    </recordTypes>
    <recordTypes>
        <fullName>sample2</fullName>
        <active>true</active>
        <label>sample2</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Account_Number_Is_Numeric</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
ISBLANK(AccountNumber),
NOT(ISNUMBER(AccountNumber))
)</errorConditionFormula>
        <errorDisplayField>AccountNumber</errorDisplayField>
        <errorMessage>account number must be required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Account_number_is_7_digit</fullName>
        <active>false</active>
        <description>Validates that the Account Number is exactly seven digits (if it is not blank). The number seven is simply illustrative. You can change this to any number you like.</description>
        <errorConditionFormula>AND(
   ISBLANK( AccountNumber ),
   LEN(AccountNumber) &lt;&gt; 7
)</errorConditionFormula>
        <errorDisplayField>AccountNumber</errorDisplayField>
        <errorMessage>account number must be required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PAN_CARD</fullName>
        <active>false</active>
        <errorConditionFormula>NOT( REGEX( PAN_Card__c, &quot;((([a-zA-Z]{5})\\d{4})[a-zA-Z]{1})&quot;))</errorConditionFormula>
        <errorDisplayField>PAN_Card__c</errorDisplayField>
        <errorMessage>Please Enter the Valid Pan Card</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>phone_number_10_digits_only</fullName>
        <active>false</active>
        <errorConditionFormula>LEN(Phone) &lt;&gt; 10</errorConditionFormula>
        <errorDisplayField>Phone</errorDisplayField>
        <errorMessage>Please enter a valid phone number</errorMessage>
    </validationRules>
</CustomObject>